# pyRunner

./: CLAUDE.md  README.md  config.toml  deployapp.md  install.sh  prd.md  pyproject.toml  update.sh
dashboard/: config.py  database.py  git_poller.py  main.py  scheduler_service.py  supervisor_client.py  utils.py
dashboard/routers/: deploys.py  projects.py  schedules.py  settings.py
dashboard/templates/: base.html  deploy_log.html  execution_log.html  index.html  logs.html  project_detail.html  projects.html  schedules.html  settings.html
