[project]
name = "pyrunner"
version = "1.0.0"
description = "Local Python Task Orchestrator with Git Sync, Scheduling & Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.30",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "psutil>=5.9.8",
]

[project.scripts]
pyrunner = "dashboard.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]
